# elronom-multiversx-trading-academy

./: .env.example  .gitignore  README.md  package.json
.github/workflows/: mvx-update.yml
backend/: package.json
docs/: legal-foundation.md
frontend/: next.config.js  package.json
frontend/src/app/: page.tsx
smart-contracts/elronom-core/: Cargo.toml
smart-contracts/elronom-core/src/: lib.rs
